# openfr

./: .env.example  .gitignore  README.md  README_CN.md  README_EN.md  pyproject.toml
docs/: optimization_suggestions.md
src/openfr/: __init__.py  cli.py  config.py  server.py
src/openfr/agents/: __init__.py  schemas.py
src/openfr/agents/analysts/: __init__.py  fundamentals_analyst.py  macro_analyst.py  market_analyst.py  news_analyst.py
src/openfr/agents/managers/: __init__.py  portfolio_manager.py  research_manager.py
src/openfr/agents/researchers/: __init__.py  bear_researcher.py  bull_researcher.py
src/openfr/agents/risk_mgmt/: __init__.py  aggressive_analyst.py  conservative_analyst.py  neutral_analyst.py
src/openfr/agents/utils/: agent_states.py  content.py  structured.py  tool_executor.py
src/openfr/graph/: __init__.py  conditional_logic.py  propagation.py  research_graph.py  setup.py
src/openfr/tools/: __init__.py
tests/: test_integration.py
ts/: package.json
ts/src/: cli.ts  config.ts  index.ts  plan-execute.ts  prompts.ts  scratchpad.ts  tool-discovery.ts  tool-proxy.ts
